--- a/style.css
+++ b/style.css
@@ -29,3 +29,17 @@ body{
     font-weight: 600;
     color:darkviolet;
 }
+
+button{
+    padding: 10px 20px;
+    outline: none;
+    border:none;
+    background-color: darkviolet;
+    color: #fff;
+    border-radius: 10px;
+    font-weight: 600;
+}
+
+.form-elements{
+    margin: 20px 0;
+}
